chore: use StandardCharsets.UTF_8 (#1753)
Motivation:\nAvoid stringly-typed UTF-8 charset usage in encoding and decoding code paths.\n\nModification:\nReplace UTF-8 charset string arguments with StandardCharsets.UTF_8 and normalize touched XML declarations where applicable.\n\nResult:\nCharset usage is type-safe and exact lowercase "utf-8" string literals are removed from the touched areas.